--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,7 @@
             align-items: center;
         }
         .task-buttons button {
-            background-color: #008000; /* Cambia el color de fondo a verde */
+            background-color: #008000; 
             color: #fff;
             border: none;
             padding: 5px 10px;
@@ -64,7 +64,7 @@
             outline: none;
         }
         .task-buttons button:hover {
-            background-color: #005200; /* Cambia el color de fondo a un verde más oscuro al pasar el ratón */
+            background-color: #005200; 
         }
         .complete-button {
             margin-right: 10px;
